# generic-pod

phala-types/: Cargo.toml
phala-types/src/: lib.rs
phala-types/src/pink/: rt.rs
ticket-gate/: Cargo.toml  run-remote-log.sh
ticket-gate/src/: docker.rs  events_reader.rs  main.rs  metadata.rs  state.rs  web_api.rs
ticket-gate/static/: Makefile  index.html  style.css  style.scss
ticket-house/: Cargo.toml  exp.rs  lib.rs
